--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   gtag('config', 'G-JLXEDSL6PZ');
 </script>
     <title>Laci</title>
-    <meta name="description" content="Convert Your List to 'Check-able' List." />
+    <meta name="description" content="Hitung uang lacimu :3" />
     <meta charset="UTF-8" />
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
